@@ -50,6 +50,7 @@
 - updated: `U.GUID()` supports better charset by Guy Fraser
 - updated: `Date.add(number)` supports number increase/decrease in milliseconds
 - updated: `U.send(name, stream, url, callback, [cookies], [headers], [method], [timeout])` supports cookies and timeout
+- updaded: `controller.error(error_builder)` responses (to client) according to the `error_builder`
 
 - fixed: `String.isJSON()` the problem with `\n` character
 - fixed: `FrameworkImage.save()` problem with streams
@@ -80,6 +81,7 @@
 - removed: `Utils.isEmail()`
 - removed: `Utils.isURL()`
 - removed: `Utils.isValid()`
+- removed: `controller.hash()`, use `F.hash()`
 
 - improved: SMTP sender
 - improved: redirecting
@@ -89,6 +91,7 @@
 - improved: code (a lot)
 - improved: preparing `SchemaBuilderEntity`
 - improved: performance
+- improved: `SUCCESS()`
 
 ======= 1.9.7
 
